--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <title>Hizba Jaisy Muhammad</title>
   </head>
   <body style="margin: 0px; border: 1px solid whitesmoke">
@@ -50,24 +54,44 @@
       <div class="container-isi-pengalaman-pendidikan">
         <div class="pengalaman">
           <h2 class="tulpengalaman">PENGALAMAN</h2>
-          <li>Belajar Algoritma Pemrograman 1(Semester 1)</li>
-          <li>Belajar Algoritma Pemrograman 2(Semestar 2)</li>
+          <li class="list1">Belajar Algoritma Pemrograman 1(Semester 1)</li>
+          <li class="list1">Belajar Algoritma Pemrograman 2(Semestar 2)</li>
         </div>
         <div class="pendidikan">
           <h2 class="tulpendidikan">PENDIDIKAN</h2>
-          <li>Institut Teknologi Sumatera (2022 - Sekarang)</li>
-          <li>SMA IT Fithrah Insani (2019-2022)</li>
-          <li>SMP IT Fithrah Insani Boarding School (2016 - 2019)</li>
+          <li class="list1">Institut Teknologi Sumatera (2022 - Sekarang)</li>
+          <li class="list1">SMA IT Fithrah Insani (2019-2022)</li>
+          <li class="list1">
+            SMP IT Fithrah Insani Boarding School (2016 - 2019)
+          </li>
         </div>
       </div>
     </div>
-    <h2>KONTAK</h2>
-    <li>
-      <a
-        href="https://api.whatsapp.com/send/?phone=6285341929161&text&type=phone_number&app_absent=0"
-        >WhatsApp</a
-      >
-    </li>
-    <li><a href="https://www.instagram.com/hizbajaisy/">Instagram</a></li>
+    <div class="container-kontak">
+      <h2 class="tulkontak">KONTAK</h2>
+      <div style="list-style-type: none">
+        <div style="text-align: center" class="container-list">
+          <li class="list2">
+            <span class="fab fa-instagram"></span
+            ><a
+              class="isikontak"
+              class="ins"
+              href="https://www.instagram.com/hizbajaisy/"
+              >@hizbajaisy</a
+            ><span class="fab fa-instagram" class="iconkontak"></span>
+          </li>
+          <li class="list2">
+            <span class="fab fa-whatsapp"></span
+            ><a
+              class="isikontak"
+              href="https://api.whatsapp.com/send/?phone=6285341929161&text&type=phone_number&app_absent=0"
+              class="wa"
+              >085341929161</a
+            >
+            <span class="fab fa-whatsapp"></span>
+          </li>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
